--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -5,13 +5,45 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>Nombre</ion-title>
+  <ion-navbar primary>
+    <ion-title>Simulador de ruidos cardiacos</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content>
-  <button large full (click)="clickPlay()">Comenzar</button>
-  <button large full (click)="clickListen()">Entrenar</button>
+
+  <ion-card>
+    <ion-card-header>
+      Entrenar
+    </ion-card-header>
+    <ion-card-content>
+      <p>En esta seccion de la aplicacion podra escuchar todos los ruidos disponibles.</p>
+    </ion-card-content>
+
+      <ion-list inset>
+        <button ion-item (click)="clickListen()">
+          Comenzar
+        </button>
+      </ion-list>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Reconocer
+    </ion-card-header>
+    <ion-card-content>
+      <p>En esta seccion de la aplicacion, se le presentara un ruido cardiaco, y opciones para identificar al mismo.</p>
+      <p>Puede elegir si reconocer ruidos de uno de los grupos disponibles, o todos a la vez.</p>
+    </ion-card-content>
+
+      <ion-list inset>
+        <button ion-item (click)="clickPlay('')">
+          Todas
+        </button>
+        <button ion-item (click)="clickPlay(category)" *ngFor="let category of categories">
+          {{category}}
+        </button>
+      </ion-list>
+  </ion-card>
 </ion-content>
