--- a/app/pages/listen/listen.html
+++ b/app/pages/listen/listen.html
@@ -5,8 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>Escuchar</ion-title>
+  <ion-navbar primary>
+    <ion-title>Entrenar</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -15,8 +15,8 @@
     <ion-item-group *ngFor="let category of sounds">
 
       <ion-item-divider light>{{category.name}}</ion-item-divider>
-      <ion-item *ngFor="let sound of category.sounds">
-        <p text-wrap>{{sound.name}}</p>
+      <ion-item text-wrap *ngFor="let sound of category.sounds" class="item-text-wrap">
+        <p>{{sound.name}}</p>
         <button clear item-right (click)="playItem(sound)">
           <ion-icon name='play' is-active="false"></ion-icon>
         </button>
